--- a/Proyecto14/codigo.html
+++ b/Proyecto14/codigo.html
@@ -161,7 +161,7 @@
         font-family: Montserrat, Arial, sans-serif;
         font-size: 17px; /* Tamaño actualizado */
         font-weight: 900; /* Extrabold */
-        color: #CC444E;
+        color: #E79187;
         text-align: center;
         padding-top: 40px; /* Mucho espacio arriba */
         padding-bottom: 25px; /* Espacio debajo */
@@ -176,43 +176,33 @@
   <!-- Imagen principal -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
+      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto14/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
     </tr>
   </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7214/s/labial-en-barra-vegano-rouge-elixir-mat-1/category/599/?utm_source=meta+&utm_medium=mail+octubre+2&utm_campaign=labial&utm_id=mail+octubre+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/2.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/acondicionador-protector-brillo-y-color-200ml.html?utm_source=meta+&utm_medium=mail+octubre+4&utm_campaign=mail&utm_id=mail+octubre+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto14/2.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7214/s/labial-en-barra-vegano-rouge-elixir-mat-1/category/599/?utm_source=meta+&utm_medium=mail+octubre+2&utm_campaign=labial&utm_id=mail+octubre+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/3.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/maquillaje/yr-80375-desmaquillante-express-ojos-100ml.html?utm_source=meta+&utm_medium=mail+octubre+4&utm_campaign=mail&utm_id=mail+octubre+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto14/3.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7214/s/labial-en-barra-vegano-rouge-elixir-mat-1/category/599/?utm_source=meta+&utm_medium=mail+octubre+2&utm_campaign=labial&utm_id=mail+octubre+
-
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/4.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-43085-gel-de-ducha-eco-concentrado-oliva-y-flor-de-azahar-1000-ml.html?utm_source=meta+&utm_medium=mail+octubre+4&utm_campaign=mail&utm_id=mail+octubre+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto14/4.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
-
-    <!-- Cuarta imagen -->
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
-      <tr>
-        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7214/s/labial-en-barra-vegano-rouge-elixir-mat-1/category/599/?utm_source=meta+&utm_medium=mail+octubre+2&utm_campaign=labial&utm_id=mail+octubre+
-
-          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/5.jpg" width="650" height="400" style="display:block;border:none;max-width:650px;max-height:400px;" /></a></td>
-      </tr>
-    </table>
 
 
 
@@ -230,8 +220,8 @@
             <td align="center">
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/6.jpg" width="30" height="30" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto12/7.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto14/5.png" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto14/6.png" width="30" height="30" border="0" /></a></td>
                 </tr>
               </table>
             </td>
