--- a/Proyecto17/codigo.html
+++ b/Proyecto17/codigo.html
@@ -161,7 +161,7 @@
         font-family: Montserrat, Arial, sans-serif;
         font-size: 17px; /* Tamaño actualizado */
         font-weight: 900; /* Extrabold */
-        color: #6980BC;
+        color: #E5B14D;
         text-align: center;
         padding-top: 40px; /* Mucho espacio arriba */
         padding-bottom: 25px; /* Espacio debajo */
@@ -176,38 +176,60 @@
   <!-- Imagen principal -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto16/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
+      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
     </tr>
   </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/aceite-tradicional-nutritivo-monoi-100-ml.html?utm_source=meta+&utm_medium=mail+Noviemre+1&utm_campaign=mail&utm_id=mail+Noviembre++
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto16/2.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/cabello.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/2.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/aceite-brillante-monoi-100-ml.html?utm_source=meta+&utm_medium=mail+Noviemre+1&utm_campaign=mail&utm_id=mail+Noviembre++
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto16/3.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/3.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-78730-aceite-seco-multiuso-hidratante-monoi-125ml.html?utm_source=meta+&utm_medium=mail+Noviemre+1&utm_campaign=mail&utm_id=mail+Noviembre++
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto16/4.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/cuerpo/lineas/monoi.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/4.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
     <!-- Cuarta imagen -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
       <tr>
-        <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto16/5.jpeg" width="650" height="250" style="display:block;border:none;max-width:650px;max-height:250px;" /></td>
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/maquillaje.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
+          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/5.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      </tr>
+    </table>
+      <!-- Cuarta imagen -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalogsearch/result/?q=3x2&utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/6.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+    </tr>
+  </table>
+    <!-- Cuarta imagen -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+      <tr>
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/perfume.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
+          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/7.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      </tr>
+    </table>
+
+    <!-- Cuarta imagen -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+      <tr>
+        <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/8.jpeg" width="650" height="250" style="display:block;border:none;max-width:650px;max-height:250px;" /></td>
       </tr>
     </table>
   
@@ -222,8 +244,8 @@
             <td align="center">
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto16/6.jpg" width="30" height="30" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto16/7.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/9.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/10.jpg" width="30" height="30" border="0" /></a></td>
                 </tr>
               </table>
             </td>
