--- a/Proyecto18/codigo.html
+++ b/Proyecto18/codigo.html
@@ -176,63 +176,56 @@
   <!-- Imagen principal -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
+      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto18/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
     </tr>
   </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/cabello.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/2.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/3x2-vinagre-brillo-150-ml.html?utm_source=mail&utm_medium=noviembre4+&utm_id=Black+Sale+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto18/2.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/3.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-97213-pure-menthe-la-mascarilla-purificante-de-arcilla-75ml.html?utm_source=mail&utm_medium=noviembre4+&utm_id=Black+Sale+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto18/3.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/cuerpo/lineas/monoi.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/4.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-90253-mascara-volumen-01-negro-8ml.html?utm_source=mail&utm_medium=noviembre4+&utm_id=Black+Sale+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto18/4.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
     <!-- Cuarta imagen -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
       <tr>
-        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/maquillaje.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
-          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/5.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-84800-eau-de-parfum-garden-party-1000-ml.html?utm_source=mail&utm_medium=noviembre4+&utm_id=Black+Sale+
+          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto18/5.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
       </tr>
     </table>
       <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalogsearch/result/?q=3x2&utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/6.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/3x2-bruma-corporal-100-ml.html?utm_source=mail&utm_medium=noviembre4+&utm_id=Black+Sale+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto18/6.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
-    <!-- Cuarta imagen -->
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
-      <tr>
-        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/perfume.html?utm_source=mail&utm_medium=noviembre&utm_id=Black+Sale+
-          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/7.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
-      </tr>
-    </table>
+        <!-- Cuarta imagen -->
+        <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+          <tr>
+            <td align="center" valign="top">
+              <img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto18/9.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></td>
+          </tr>
+        </table>
 
-    <!-- Cuarta imagen -->
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
-      <tr>
-        <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/8.jpeg" width="650" height="250" style="display:block;border:none;max-width:650px;max-height:250px;" /></td>
-      </tr>
-    </table>
-  
 
 
 
@@ -244,8 +237,8 @@
             <td align="center">
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/9.jpg" width="30" height="30" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto17/10.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto18/7.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto18/8.jpg" width="30" height="30" border="0" /></a></td>
                 </tr>
               </table>
             </td>
