--- a/Proyecto21/codigo.html
+++ b/Proyecto21/codigo.html
@@ -176,44 +176,65 @@
   <!-- Imagen principal -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto20/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
+      <td align="center" valign="top"><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/1.jpg" width="650" height="908" style="display:block;border:none;max-width:650px;max-height:908px;" /></td>
     </tr>
   </table>
 
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/kit-hidratante-corporal-390-jabon-de-manos-combinalos-como-tu-quieras-1.html?utm_source=web&utm_medium=mail&utm_id=navidad+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto20/2.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/cabello.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/2.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/kit-hidratante-corporal-390-jabon-de-manos-combinalos-como-tu-quieras.html?utm_source=web&utm_medium=mail&utm_id=navidad+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto20/3.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/cuerpo/lineas/monoi.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/3.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
 
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rutina-capilar-express-2.html?utm_source=web&utm_medium=mail&utm_id=navidad+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto20/4.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/4.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
-
-
 
     <!-- Cuarta imagen -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
       <tr>
-        <td align="center" valign="top">
-          <img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto20/5.jpg" width="650" height="150" style="display:block;border:none;max-width:650px;max-height:150px;" /></td>
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/maquillaje.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
+          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/5.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
       </tr>
     </table>
+      <!-- Cuarta imagen -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+    <tr>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/perfume.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/6.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+    </tr>
+  </table>
 
+        <!-- Cuarta imagen -->
+        <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+          <tr>
+            <td align="center" valign="top"><a href="https://www.yvesrocher.cl/promociones.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
+              "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/7.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+          </tr>
+        </table>
+
+          <!-- Cuarta imagen -->
+          <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+            <tr>
+              <td align="center" valign="top">
+                <img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/8.jpeg" width="650" height="150" style="display:block;border:none;max-width:650px;max-height:150px;" /></td>
+            </tr>
+          </table>
+  
 
 
 
@@ -226,8 +247,8 @@
             <td align="center">
               <table class="social-logos" border="0" cellspacing="0" cellpadding="0">
                 <tr>
-                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto20/7.jpg" width="30" height="30" border="0" /></a></td>
-                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto20/6.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://web.facebook.com/yvesrocherchile/?locale=es_LA&_rdc=1&_rdr" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/9.jpg" width="30" height="30" border="0" /></a></td>
+                  <td><a href="https://www.instagram.com/yvesrocher_cl/?hl=es" target="_blank"><img src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto19/10.jpg" width="30" height="30" border="0" /></a></td>
                 </tr>
               </table>
             </td>
