--- a/Proyecto21/codigo.html
+++ b/Proyecto21/codigo.html
@@ -183,15 +183,23 @@
   <!-- Segunda imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/cabello.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
-        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto21/2.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/aceite-tradicional-nutritivo-monoi-100-ml.html?utm_source=web&utm_medium=mail&utm_id=navidad+3+
+        "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto21/22.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
+
+    <!-- Segunda imagen -->
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
+      <tr>
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/shampoo-iluminador-violeta-sin-sulfatos-300-ml.html?utm_source=web&utm_medium=mail&utm_id=navidad+3+
+          "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto21/2.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
+      </tr>
+    </table>
 
   <!-- Tercera imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/cuerpo/lineas/monoi.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/serum-termoprotector-fortalecedor-anti-rotura-sin-siliconas-100-ml.html?utm_source=web&utm_medium=mail&utm_id=navidad+3+
         "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto21/3.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
@@ -199,7 +207,7 @@
   <!-- Cuarta imagen -->
   <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
     <tr>
-      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/rostro.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
+      <td align="center" valign="top"><a href="https://www.yvesrocher.cl/catalog/product/view/id/7187/?utm_source=web&utm_medium=mail&utm_id=navidad+3+
         "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto21/4.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
     </tr>
   </table>
@@ -207,7 +215,7 @@
     <!-- Cuarta imagen -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" style="table-layout:fixed;">
       <tr>
-        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/maquillaje.html?utm_source=mail&utm_medium=diciembre+1+&utm_id=navidad+
+        <td align="center" valign="top"><a href="https://www.yvesrocher.cl/yr-97050-pure-menthe-locion-polvo-matificante-150ml.html?utm_source=web&utm_medium=mail&utm_id=navidad+3+
           "><img class="full_img" src="https://raw.githubusercontent.com/olguitab/Proyecto/main/Proyecto21/5.jpg" width="650" height="550" style="display:block;border:none;max-width:650px;max-height:550px;" /></a></td>
       </tr>
     </table>
